--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "fu43htzfu8zesvnt",
-    "password": "jt4qe2f41yiap9jv",
-    "database": "z67els87vbkuxbhj",
-    "host": "l3855uft9zao23e2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "username": "cyjorx8fb9pvwjxf",
+    "password": "kaebmjjmz7v5o7km",
+    "database": "lbk0xsw8xzey3p0m",
+    "host": "d6vscs19jtah8iwb.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
   }
